--- a/config/firewall.yaml
+++ b/config/firewall.yaml
@@ -4,11 +4,14 @@ egress:
   - ports:
       - protocol: TCP
         port: 443
+      - protocol: TCP
+        port: 22
 ingress:
   - ports:
       - protocol: TCP
         port: 9090
-
+      - protocol: TCP
+        port: 22
 # The following lines are suggested based on Instruqt's allow_external_ingress fields:
 # rhel:
 #   - http
