--- a/config/instances.yaml
+++ b/config/instances.yaml
@@ -12,6 +12,7 @@ virtualmachines:
       - default
   - name: "satellite"
     image: "satellite-dv"
+    bootloader: efi
     memory: "32G"
     cores: 1
     image_size: "540G"
