--- a/ui-config.yml
+++ b/ui-config.yml
@@ -20,7 +20,7 @@ antora:
       solveButton: true
 
 tabs:
-  - name: "RHEL Web Console"
-    url: https://cockpit-${guid}.${domain}/
+  - name: "Satellite"
+    url: https://satellite-${guid}.${domain}/
   - name: ">_ terminal"
     url: /wetty
